--- a/index.html
+++ b/index.html
@@ -24,5 +24,8 @@
         </ul>
     </nav>
     <!-- Add main tag here -->
+    <main>
+        <h1> Hi, David! </h1> 
+    </main>
 </body>
 </html>
